# Zapret-Hub-Mods

./: CHANGELOG_1.4.3_DRAFT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
Minecraft-by-peshk0v/: metadata.json
Minecraft-by-peshk0v/lists/: list-general.txt
Roblox-by-peshk0v/: metadata.json
SoundCloud-by-peshk0v/: metadata.json
SoundCloud-by-peshk0v/lists/: list-general.txt
Twitch-by-peshk0v/: metadata.json
Twitch-by-peshk0v/lists/: list-general.txt
X-by-peshk0v/: metadata.json
X-by-peshk0v/lists/: list-general.txt
installer/: embedded_app_icon.py  install_zaprethub.py
packaging/: install_zaprethub.spec  zapret_hub.spec
runtime/tg-ws-proxy/: macos.py  windows.py
runtime/tg-ws-proxy/docs/: README.md
runtime/tg-ws-proxy/packaging/: version_info.txt
runtime/tg-ws-proxy/proxy/: __init__.py  bridge.py  config.py  tg_ws_proxy.py
runtime/tg-ws-proxy/ui/: ctk_tray_ui.py
runtime/tg-ws-proxy/utils/: tray_common.py  update_check.py
runtime/zapret-discord-youtube/: README.md
runtime/zapret-discord-youtube/lists/: ipset-all.txt.backup  list-general.txt  list-google.txt
sample_data/default_mods/unified-by-goshkow/: general (ALT10.1).bat  general (ALT11.1).bat  general (ALT11.2).bat  general (ALT7.1).bat  general (ALT9.1.1).bat  metadata.json
scripts/: build_nuitka.ps1  build_nuitka_installer.ps1  prepare_nuitka_release.py
src/zapret_hub/: app.py  bootstrap.py  main.py  worker_entry.py  workers.py
src/zapret_hub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+18 files in other folders)
