[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zapret-hub"
version = "1.3.0"
description = "Windows desktop hub for managing external network utilities and configuration packs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "cryptography>=46.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.6",
]

[project.scripts]
zapret-hub = "zapret_hub.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
